--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-FlagEmbedding==1.2.10
-numpy==1.26.4
-pandas==2.2.2
-streamlit==1.35.0
+version https://git-lfs.github.com/spec/v1
+oid sha256:ee64a0d708f6afad25619373445b06eaab18c3d0263c524fdc19ea539f15c40c
+size 70
